WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274431
PublicSuffixStore::m_canAcceptCustomPublicSuffix doesn't need synchronization
https://bugs.webkit.org/show_bug.cgi?id=274431
Summary
PublicSuffixStore::m_canAcceptCustomPublicSuffix doesn't need synchronization
Chris Dumez
Reported
2024-05-20 19:21:58 PDT
PublicSuffixStore::m_canAcceptCustomPublicSuffix doesn't need synchronization as it is only ever used on the main thread.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-05-20 19:24:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28819
EWS
Comment 2
2024-05-21 00:24:42 PDT
Committed
279041@main
(faa8131037e9): <
https://commits.webkit.org/279041@main
> Reviewed commits have been landed. Closing PR #28819 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-21 00:26:43 PDT
<
rdar://problem/128448309
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug