PublicSuffixStore::m_canAcceptCustomPublicSuffix doesn't need synchronization https://bugs.webkit.org/show_bug.cgi?id=274431

Reviewed by Darin Adler and Ryosuke Niwa.

PublicSuffixStore::m_canAcceptCustomPublicSuffix doesn't need synchronization
as it is only ever used on the main thread.

* Source/WebCore/platform/PublicSuffixStore.h:
(WebCore::PublicSuffixStore::WTF_GUARDED_BY_LOCK): Deleted.
* Source/WebCore/platform/cocoa/PublicSuffixStoreCocoa.mm:
(WebCore::PublicSuffixStore::enablePublicSuffixCache):
(WebCore::PublicSuffixStore::addPublicSuffix):

Canonical link: https://commits.webkit.org/279041@main